pyctp/macos/ctptrade_api.py

        self.h.tReqQryOptionSelfClose.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryOptionSelfClose.restype = c_void_p
        # 请求查询投资单元
        self.h.tReqQryInvestUnit.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryInvestUnit.restype = c_void_p
        # 请求查询组合合约安全系数
        self.h.tReqQryCombInstrumentGuard.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryCombInstrumentGuard.restype = c_void_p
        # 请求查询申请组合
        self.h.tReqQryCombAction.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryCombAction.restype = c_void_p
        # 请求查询转帐流水
        self.h.tReqQryTransferSerial.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryTransferSerial.restype = c_void_p
        # 请求查询银期签约关系
        self.h.tReqQryAccountregister.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryAccountregister.restype = c_void_p
        # 请求查询签约银行
        self.h.tReqQryContractBank.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryContractBank.restype = c_void_p
        # 请求查询预埋单
        self.h.tReqQryParkedOrder.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryParkedOrder.restype = c_void_p
        # 请求查询预埋撤单
        self.h.tReqQryParkedOrderAction.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryParkedOrderAction.restype = c_void_p
        # 请求查询交易通知
        self.h.tReqQryTradingNotice.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryTradingNotice.restype = c_void_p
        # 请求查询经纪公司交易参数
        self.h.tReqQryBrokerTradingParams.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryBrokerTradingParams.restype = c_void_p
        # 请求查询经纪公司交易算法
        self.h.tReqQryBrokerTradingAlgos.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryBrokerTradingAlgos.restype = c_void_p
        # 请求查询监控中心用户令牌
        self.h.tReqQueryCFMMCTradingAccountToken.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQueryCFMMCTradingAccountToken.restype = c_void_p
        # 期货发起银行资金转期货请求
        self.h.tReqFromBankToFutureByFuture.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqFromBankToFutureByFuture.restype = c_void_p
        # 期货发起期货资金转银行请求
        self.h.tReqFromFutureToBankByFuture.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqFromFutureToBankByFuture.restype = c_void_p
        # 期货发起查询银行余额请求
        self.h.tReqQueryBankAccountMoneyByFuture.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQueryBankAccountMoneyByFuture.restype = c_void_p
        # 请求查询分类合约
        self.h.tReqQryClassifiedInstrument.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryClassifiedInstrument.restype = c_void_p
        # 请求组合优惠比例
        self.h.tReqQryCombPromotionParam.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryCombPromotionParam.restype = c_void_p
        # 投资者风险结算持仓查询
        self.h.tReqQryRiskSettleInvstPosition.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryRiskSettleInvstPosition.restype = c_void_p
        # 风险结算产品查询
        self.h.tReqQryRiskSettleProductStatus.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryRiskSettleProductStatus.restype = c_void_p
        # SPBM期货合约参数查询
        self.h.tReqQrySPBMFutureParameter.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQrySPBMFutureParameter.restype = c_void_p
        # SPBM期权合约参数查询
        self.h.tReqQrySPBMOptionParameter.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQrySPBMOptionParameter.restype = c_void_p
        # SPBM品种内对锁仓折扣参数查询
        self.h.tReqQrySPBMIntraParameter.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQrySPBMIntraParameter.restype = c_void_p
        # SPBM跨品种抵扣参数查询
        self.h.tReqQrySPBMInterParameter.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQrySPBMInterParameter.restype = c_void_p
        # SPBM组合保证金套餐查询
        self.h.tReqQrySPBMPortfDefinition.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQrySPBMPortfDefinition.restype = c_void_p
        # 投资者SPBM套餐选择查询
        self.h.tReqQrySPBMInvestorPortfDef.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQrySPBMInvestorPortfDef.restype = c_void_p
        # 投资者新型组合保证金系数查询
        self.h.tReqQryInvestorPortfMarginRatio.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryInvestorPortfMarginRatio.restype = c_void_p
        # 投资者产品SPBM明细查询
        self.h.tReqQryInvestorProdSPBMDetail.argtypes = [c_void_p, c_void_p, c_int32]
        self.h.tReqQryInvestorProdSPBMDetail.restype = c_void_p
        
        os.chdir(cur_path)

    def CreateApi(self):
        self.api = self.h.tCreateApi(c_char_p(self.pszFlowPath.encode("utf-8")))
